css/main.css
@media print {
  body {
    font-size: 1.17rem;
    .col-12 {
      page-break-inside:avoid;
    }
  }
  .jumbotron {
    padding-top: 0;
    padding-bottom: 0;
  }
}

.my-name {
  font-size: 4rem;
}

.jumbotron span.oi {
  min-width: 32px;
}

.experience h4 {
  font-weight: bold;
}

